FIX Obsolete classes don't break the elemental area.

--- a/client/src/components/ElementEditor/Element.scss
+++ b/client/src/components/ElementEditor/Element.scss
@@ -17,6 +17,10 @@
     }
   }
 
+  &--broken {
+    cursor: default;
+  }
+
   &--dragging {
     opacity: 0.3;
     cursor: grabbing;
